--- a/index.html
+++ b/index.html
@@ -1,121 +1,144 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>For Chad 💕</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            background-color: #ffb6d9;
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
+    <title>For Chad 💖</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        h1 {
-            margin-top: 120px;
-            font-size: 40px;
-            color: white;
-        }
+    <!-- Cute Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
-        button {
-            padding: 15px 30px;
-            font-size: 18px;
-            border: none;
-            border-radius: 30px;
-            cursor: pointer;
-            position: absolute;
-        }
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            background: #ffc0e6;
+            font-family: 'Poppins', sans-serif;
+            text-align: center;
+            height: 100vh;
+        }
 
-        #yesBtn {
-            background-color: #ff4d88;
-            color: white;
-            left: 45%;
-            top: 50%;
-        }
+        h1 {
+            margin-top: 120px;
+            font-size: 60px;
+            color: white;
+            font-family: 'Pacifico', cursive;
+            text-shadow: 2px 2px 10px rgba(0,0,0,0.2);
+        }
 
-        #noBtn {
-            background-color: white;
-            color: #ff4d88;
-            left: 55%;
-            top: 50%;
-        }
+        button {
+            padding: 20px 40px;
+            font-size: 24px;
+            border: none;
+            border-radius: 40px;
+            cursor: pointer;
+            position: absolute;
+            transition: 0.2s;
+            font-weight: 600;
+        }
 
-        .heart {
-            position: absolute;
-            color: white;
-            font-size: 24px;
-            animation: float 6s linear infinite;
-        }
+        #yesBtn {
+            background-color: #ff4d88;
+            color: white;
+            left: 40%;
+            top: 60%;
+        }
 
-        @keyframes float {
-            0% {
-                transform: translateY(100vh);
-                opacity: 1;
-            }
-            100% {
-                transform: translateY(-10vh);
-                opacity: 0;
-            }
-        }
+        #noBtn {
+            background-color: white;
+            color: #ff4d88;
+            left: 58%;
+            top: 60%;
+        }
 
-        #popup {
-            display: none;
-            position: fixed;
-            top: 20%;
-            left: 35%;
-            background: white;
-            padding: 30px;
-            border-radius: 20px;
-            text-align: center;
-            box-shadow: 0 0 20px rgba(0,0,0,0.3);
-        }
+        button:hover {
+            transform: scale(1.1);
+        }
 
-        #popup img {
-            width: 200px;
-        }
-    </style>
+        .heart {
+            position: absolute;
+            font-size: 24px;
+            animation: floatUp linear forwards;
+        }
+
+        @keyframes floatUp {
+            0% {
+                transform: translateY(100vh);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(-10vh);
+                opacity: 0;
+            }
+        }
+
+        #popup {
+            display: none;
+            position: fixed;
+            top: 25%;
+            left: 50%;
+            transform: translateX(-50%);
+            background: white;
+            padding: 40px;
+            border-radius: 25px;
+            box-shadow: 0 0 30px rgba(0,0,0,0.3);
+            z-index: 1000;
+        }
+
+        #popup h2 {
+            font-size: 32px;
+            color: #ff4d88;
+            font-family: 'Pacifico', cursive;
+        }
+
+        #popup img {
+            width: 220px;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
 
-<h1>Chad… will you be my Valentine? 💖</h1>
+<h1>Chad… will you be my Valentine? 💕</h1>
 
-<button id="yesBtn" onclick="showCat()">Yes 💕</button>
+<button id="yesBtn">Yes 💖</button>
 <button id="noBtn">No 😏</button>
 
 <div id="popup">
-    <h2>YAYYYYY 💖</h2>
-    <img src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="Dancing Cat">
+    <h2>YAYYYYY 💕</h2>
+    <img src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="Dancing Cat">
 </div>
 
 <script>
-    const noBtn = document.getElementById("noBtn");
+    const yesBtn = document.getElementById("yesBtn");
+    const noBtn = document.getElementById("noBtn");
+    const popup = document.getElementById("popup");
 
-    noBtn.addEventListener("mouseover", function() {
-        const x = Math.random() * (window.innerWidth - 100);
-        const y = Math.random() * (window.innerHeight - 50);
-        noBtn.style.left = x + "px";
-        noBtn.style.top = y + "px";
-    });
+    yesBtn.addEventListener("click", function() {
+        popup.style.display = "block";
+    });
 
-    function showCat() {
-        document.getElementById("popup").style.display = "block";
-    }
+    noBtn.addEventListener("mouseenter", function() {
+        const x = Math.random() * (window.innerWidth - 150);
+        const y = Math.random() * (window.innerHeight - 80);
+        noBtn.style.left = x + "px";
+        noBtn.style.top = y + "px";
+    });
 
-    function createHeart() {
-        const heart = document.createElement("div");
-        heart.classList.add("heart");
-        heart.innerHTML = "💗";
-        heart.style.left = Math.random() * window.innerWidth + "px";
-        heart.style.fontSize = Math.random() * 20 + 20 + "px";
-        heart.style.animationDuration = Math.random() * 3 + 3 + "s";
-        document.body.appendChild(heart);
+    function createHeart() {
+        const heart = document.createElement("div");
+        heart.classList.add("heart");
+        heart.innerHTML = "💗";
+        heart.style.left = Math.random() * window.innerWidth + "px";
+        heart.style.fontSize = (Math.random() * 20 + 20) + "px";
+        heart.style.animationDuration = (Math.random() * 3 + 3) + "s";
+        document.body.appendChild(heart);
 
-        setTimeout(() => {
-            heart.remove();
-        }, 6000);
-    }
+        setTimeout(() => {
+            heart.remove();
+        }, 6000);
+    }
 
-    setInterval(createHeart, 300);
+    setInterval(createHeart, 300);
 </script>
 
 </body>
